full-moon/tests/cfxlua_cases/fail/parser/each_iteration/source.lua
local t = { 1, 2, 3 }
for in each(t) do print(k, v) end
